--- a/course1/course1.vcxproj.filters
+++ b/course1/course1.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="..\window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\gl_utility.cpp">
+    <ClCompile Include="..\glUtility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,7 +44,7 @@
     <ClInclude Include="..\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\gl_utility.h">
+    <ClInclude Include="..\glUtility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
