--- a/course2/course2.vcxproj.filters
+++ b/course2/course2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\GL\wglext.h">
       <Filter>Header Files\GL</Filter>
     </ClInclude>
+    <ClInclude Include="..\glUtility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -36,10 +39,7 @@
     <ClInclude Include="..\vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\gl_utility.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\timer.h">
+    <ClInclude Include="..\Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,13 +50,13 @@
     <ClCompile Include="..\window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\glUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="course2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\gl_utility.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\timer.cpp">
+    <ClCompile Include="..\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
