--- a/course3/course3.vcxproj.filters
+++ b/course3/course3.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\glUtility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -37,9 +40,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\gl_utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,13 +50,13 @@
     <ClCompile Include="..\window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\glUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="course3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\gl_utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
