--- a/course3Ex/course3Ex.vcxproj
+++ b/course3Ex/course3Ex.vcxproj
@@ -75,23 +75,34 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\camera.h" />
+    <ClInclude Include="..\glCube.h" />
+    <ClInclude Include="..\glKeyboardControl.h" />
+    <ClInclude Include="..\glMouseControl.h" />
+    <ClInclude Include="..\glCircle.h" />
+    <ClInclude Include="..\glUtility.h" />
     <ClInclude Include="..\GL\gl3w.h" />
     <ClInclude Include="..\GL\glcorearb.h" />
     <ClInclude Include="..\GL\wglext.h" />
-    <ClInclude Include="..\gl_utility.h" />
     <ClInclude Include="..\matrix.h" />
+    <ClInclude Include="..\MyInputListener.h" />
     <ClInclude Include="..\stb_truetype.h" />
-    <ClInclude Include="..\timer.h" />
     <ClInclude Include="..\vector.h" />
     <ClInclude Include="..\window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\camera.cpp" />
     <ClCompile Include="..\gl3w.c" />
-    <ClCompile Include="..\gl_utility.cpp" />
-    <ClCompile Include="..\timer.cpp" />
+    <ClCompile Include="..\glAxis.h" />
+    <ClCompile Include="..\glUtility.cpp" />
+    <ClCompile Include="..\Timer.cpp" />
     <ClCompile Include="..\window.cpp" />
     <ClCompile Include="course3Ex.cpp" />
+    <ClCompile Include="glAxis.cpp" />
+    <ClCompile Include="glCube.cpp" />
+    <ClCompile Include="glKeyboardControl.cpp" />
+    <ClCompile Include="glMouseControl.cpp" />
+    <ClCompile Include="glCircle.cpp" />
+    <ClCompile Include="MyInputListener.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
