--- a/course3Ex/course3Ex.vcxproj.filters
+++ b/course3Ex/course3Ex.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\glUtility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -42,10 +45,19 @@
     <ClInclude Include="..\stb_truetype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\gl_utility.h">
+    <ClInclude Include="..\glMouseControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\timer.h">
+    <ClInclude Include="..\MyInputListener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\glCircle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\glCube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\glKeyboardControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -59,13 +71,34 @@
     <ClCompile Include="..\gl3w.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\glUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="course3Ex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\gl_utility.cpp">
+    <ClCompile Include="..\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\timer.cpp">
+    <ClCompile Include="glMouseControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyInputListener.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="glCircle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="glAxis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\glAxis.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="glCube.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="glKeyboardControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
